--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+KR:wght@200;400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+KR:wght@200;400;700&family=Oswald:wght@200..700&display=swap"
+      rel="stylesheet"
+    />
     <title>Classic Microcars</title>
   </head>
   <body>
